<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.wick</groupId>
    <artifactId>gmtabs</artifactId>
    <version>0.1</version>
    <name>GMTabs</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.11.4</junit.version>
        <openjfx.version>25.0.4</openjfx.version>
        <appModule>dev.wick.gmtabs</appModule>
        <mainClass>${appModule}/${appModule}.HelloApplication</mainClass>
        <imagePath>jlink</imagePath>
        <modPath>${project.build.directory}/mods</modPath>
        <telemetry/>
        <dist.path>${project.build.directory}/dist</dist.path>
        <dist.name>${project.name}-v${project.version}${telemetry}</dist.name>
        <legal.path>${project.build.directory}/legal</legal.path>
        <legal.licenses>${legal.path}/licenses</legal.licenses>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>jpackage-maven-plugin</artifactId>
            <version>1.8.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <outputDirectory>${modPath}</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                    </execution>
                </executions>
            </plugin>

            <!--
            JLink
            Purpose: Prepares a runtime image (essentially a custom JRE).
            Used by JPackage.
            -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <commandlineArgs>${project.version} ${telemetry}</commandlineArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${mainClass}</mainClass>
                            <launcher>app</launcher>
                            <jlinkImageName>${imagePath}</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <output>${jlinkOutput}</output>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>Telemetry</id>
            <properties>
                <telemetry>T</telemetry>
            </properties>
        </profile>
        <profile>
            <id>JPackage</id>
            <build>
                <plugins>
                    <!--Maven Resource copier
                    Copies licenses from ./third-party-licenses that were excluded from the downloader.
                    #TODO add LICENSE.TXT for this project
                    -->
                    <plugin>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <id>copy-licenses</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${legal.licenses}</outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>third-party-licenses</directory>
                                            <filtering>true</filtering>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                        <version>2.7.1</version>
                        <executions>
                            <execution>
                                <id>list</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>add-third-party</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${legal.path}</outputDirectory>
                                </configuration>
                            </execution>
                            <execution>
                                <id>download</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>download-licenses</goal>
                                </goals>
                                <configuration>
                                    <excludedGroups>org.openjfx</excludedGroups>
                                    <licensesOutputDirectory>${legal.licenses}</licensesOutputDirectory>
                                    <licenseUrlFileNames>
                                        <spdx/>
                                    </licenseUrlFileNames>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!--
                    Dependency copier
                    Purpose: Copies project dependencies for use by jpackage.
                    -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy-dependencies</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <includeScope>runtime</includeScope>
                                    <outputDirectory>${modPath}</outputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!--
                    Jpackage
                    Purpose: Building the executable file from the jlink runtime image
                    & packaging them together.
                    -->
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.8.0</version>
                        <configuration>
                            <name>${dist.name}</name>
                            <vendor>app.org</vendor>
                            <arguments>${telemetry}</arguments>
                            <type>APP_IMAGE</type>
                            <modulePaths>
                                <modulePath>${modPath}</modulePath>
                            </modulePaths>
                            <addModules>
                                <addModule>${appModule}</addModule>
                            </addModules>
                            <module>${mainClass}</module>
                            <destination>${dist.path}</destination>
                            <javaOptions>
                                <option>--enable-preview</option>
                                <option>-Dfile.encoding=UTF-8</option>
                            </javaOptions>
                            <removeDestination>false</removeDestination>
                            <jLink>
                                <noManPages>true</noManPages>
                                <stripDebug>true</stripDebug>
                                <noHeaderFiles>true</noHeaderFiles>
                            </jLink>
                            <appContentPaths>
                                <path>${legal.path}</path>
                            </appContentPaths>
                        </configuration>

                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jpackage</goal>
                                    <!--<icon>${project.basedir}/icons/icon.ico</icon> Win-->
                                    <!--<icon>${project.basedir}/icons/icon.png</icon> Linux-->
                                    <!--<icon>${project.basedir}/icons/icons.icns</icon> Mac -->
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>